--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesomeproject",
+  "name": "processzorok",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,33 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
-    "expo": "^47.0.8",
-    "expo-status-bar": "~1.4.2",
-    "react": "^18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "*",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "6.3.1",
-    "@react-navigation/drawer": "^6.5.5",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/elements": "1.3.3",
     "@react-navigation/material-bottom-tabs": "6.2.1",
     "@react-navigation/material-top-tabs": "6.2.1",
-    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native": "6.0.10",
     "@react-navigation/native-stack": "^6.9.6",
     "@react-navigation/stack": "6.2.1",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-pager-view": "5.4.24",
+    "expo": "~47.0.7",
+    "expo-font": "~11.0.1",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-animated-border": "^1.0.2",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-pager-view": "6.0.1",
     "react-native-paper": "^4.7.2",
-    "react-native-reanimated": "^2.13.0",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-searchbar": "^1.16.0",
     "react-native-tab-view": "^3.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
